--- a/tests/WPF/UserControl1.xaml
+++ b/tests/WPF/UserControl1.xaml
@@ -5,8 +5,4 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
-</UserControl>
+             d:DesignHeight="450" d:DesignWidth="800"/>
